# PhraseFrame

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
.cursor/rules/: python-boundaries.mdc  tests.mdc  web-reader.mdc
.cursor/skills/document-adapters/: SKILL.md
.cursor/skills/product-vision/: SKILL.md
.cursor/skills/rsvp-domain/: SKILL.md
.cursor/skills/verification/: SKILL.md
docs/: AI_AGENT_PACK.md  AI_BRIEF_UX_APPEAL.md  AI_CLAIM_MATRIX.md  AI_UI_COPY_PACK.md  ARCHITECTURE.md  HOSTING.md  ROADMAP.md  SCIENCE.md  UX_APPEAL_PLAN.md  V1.md  nextsteps.md
src/phraseframe/: __init__.py  main.py
src/phraseframe/adapters/: documents.py  pdf.py  text.py  video.py
src/phraseframe/auth/: jwt.py  passwords.py
src/phraseframe/core/: chunking.py  models.py  protocols.py  stop_points.py  timing.py
src/phraseframe/db/: store.py
src/phraseframe/services/: analytics.py  checkpoints.py  library.py  reader.py  review.py
src/phraseframe/web/: deps.py  routes.py
src/phraseframe/web/static/: app.js  styles.css
src/phraseframe/web/templates/: index.html
tests/: test_analytics.py  test_checkpoints.py  test_claim_compliance.py  test_core.py  test_library.py  test_pdf_adapter.py  test_review.py  test_stop_points.py  test_store.py  test_text_adapter.py  test_video.py  test_web.py
